# Master

./: .clangd  .gitignore  .qmlls.ini  AGENTS.md  CMakeLists.txt  PLUGIN_SYSTEM_SUMMARY.md  plugins_json_example.md
qml/: AboutDialog.qml  Main.qml  Maincontroller.qml  PluginDetailView.qml  Settings.qml  UpdateNotificationCard.qml  WorkspaceSelector.qml
src/: DataStore.cpp  DataStore.h  FileLogStorage.cpp  FileLogStorage.h  FolderDialogHelper.cpp  FolderDialogHelper.h  IIpcCommunication.h  ILogStorage.h  IpcCommunicationFactory.cpp  IpcMessage.cpp  LocalSocketIpcCommunication.cpp  LocalSocketIpcCommunication.h  LogAggregator.cpp  LogEntry.cpp  MainController.cpp  MainController.h  PluginManager.cpp  PluginManager.h  ProcessManager.cpp  ProcessManager.h  ProjectConfig.cpp  ProjectConfig.h  app_info.cpp  app_info.h  main.cpp  update_checker.cpp  update_checker.h
updater/: .qmlls.ini
updater/src/: main.cpp  updater.cpp  version.json
